# cinderella

./: .gitignore  AGENTS.md  CHANGELOG.md  CINDY-DEV-GOALS.md  Cargo.toml  Makefile  README.md  TODO-prompt-mode.md  TODO.md  codex-code-review-5-11.md  codex-mcp-security-notes-5-11.md  codex.txt  model-manifest.json  summaries.txt  warnings.txt  worklog.md
.gstack/qa-reports/: qa-report-init-2026-04-24.md
demo/: app.py  docker-compose.yml
docs/: token-introspection.md
docs/plans/: beautify.md  cocoa.md  codex-mcp-support.md  glass-slipper.md  graceful-lifecycle.md  init.md  llama-server-manager.md  parallel-benchmark.md  v0-launch.md
glass-slipper/: AppDelegate.h  AppDelegate.swift  CinderellaScaffold.swift  CompanionWindowController.swift  DiagnosticStepCell.h  DiagnosticStepCell.m  GlassSlipper-Bridging-Header.h  Info.plist  LlamaServerManager.swift  MCPActivityLog.swift  Makefile  MemoryBannerViews.swift  ModelDownloadManager.swift  StatusBarView.swift  copy-helpers.sh  main.m
glass-slipper/GlassSlipper.xcodeproj/: project.pbxproj
glass-slipper/GlassSlipperTests/: CodexMCPInstallerTests.swift  GlassSlipperTests.swift  LlamaServerManagerTests.swift
hn/: qwen36-27b
mutants.out/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  timeout.txt  unviable.txt
scripts/: bench-parallel.py  build-llama.sh  noisy-build.sh  notarize-macos.sh  package-macos.sh  status.sh
src/: agent.rs  config.rs  hw.rs  llm.rs  logging.rs  main.rs  memory_ffi.rs  memory_monitor.rs  model_manifest.rs  orchestrator.rs  server.rs  tui.rs
tests/: mcp_integration.rs
(+36 files in other folders)
