[package]
name = "cinderella"
version = "0.1.0"
edition = "2021"
description = "Local AI coding agent. The shoe that fits."
license = "MIT"

[[bin]]
name = "cinderella"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
sysinfo = "0.32"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
futures-util = "0.3"
nix = { version = "0.29", features = ["signal", "process"] }
unicode-width = "0.2"
textwrap = "0.16"
